tests/fixtures/error-missing-other/diagnostics-errors.txt
[parse-error: template/msgfmt]: MISSING_OTHER_CLAUSE
> 1 | selector: {param, select, foo {its foo} bar {its bar}}.
    |                                                      ^